NES cartridge images

--- a/public/chad-code/index.html
+++ b/public/chad-code/index.html
@@ -26,6 +26,11 @@
 				<li id="game4">Game 4</li>
 			</ul>
 		</div>
+		<div id="container-floor">
+			<div id="floor">
+				<p>This is the floor</p>
+			</div>
+		</div>
 	</div>
 </div>
 </body>
