game cartridge displays on hover

--- a/public/chad-code/index.html
+++ b/public/chad-code/index.html
@@ -20,10 +20,10 @@
 		</div>
 		<div id="container-games">
 			<ul id="games">
-				<li id="game1">Game 1</li>
-				<li id="game2">Game 2</li>
-				<li id="game3">Game 3</li>
-				<li id="game4">Game 4</li>
+				<li class="game" id="game1">Game 1</li>
+				<li class="game" id="game2">Game 2</li>
+				<li class="game" id="game3">Game 3</li>
+				<li class="game" id="game4">Game 4</li>
 			</ul>
 		</div>
 		<div id="container-floor">
