--- a/public/chad-code/index.html
+++ b/public/chad-code/index.html
@@ -8,14 +8,27 @@
 <body>
 <div id="wrapper-main">
 	<div id="container-main" >
+		<div id="container-title">
+			<div id="title">
+				<p>This is the title.</p>
+			</div>
+		</div>
 		<div id="container-tv">
 			<div id="tv">
-				<p>This is a tv.</p>
+				<!-- <p>This is a tv.</p> -->
 			</div>
 		</div>
 		<div id="container-nes">
 			<div id="nes">
-				<p>This is a nes system.</p>
+				<!-- <p>This is a nes system.</p> -->
+			</div>
+		</div>
+		<div id="container-controllers">
+			<div id="controllers">
+				<ul id="controllers">
+					<li class="controllers" id="controller1"></li>
+					<li class="controllers" id="controller2"></li>
+				</ul>
 			</div>
 		</div>
 		<div id="container-games">
@@ -26,11 +39,21 @@
 				<li class="game" id="game4">Game 4</li>
 			</ul>
 		</div>
-		<div id="container-floor">
+		<div id="container-couch">
+			<div id="couch">
+				<!-- <p>This is the couch.</p> -->
+			</div>
+		</div>
+		<div id="container-bg">
+			<div id="bg">
+				<!-- <p>This is the background</p> -->
+			</div>
+		</div>	
+<!-- 		<div id="container-floor">
 			<div id="floor">
 				<p>This is the floor</p>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </div>
 </body>
