--- a/public/chad-code/index.html
+++ b/public/chad-code/index.html
@@ -39,6 +39,16 @@
 				<li class="game" id="game4">Game 4</li>
 			</ul>
 		</div>
+		<div id="container-dude-1">
+			<div id="dude-1">
+				<p>This is a dude number 1.</p>
+			</div>
+		</div>
+		<div id="container-dude-2">
+			<div id="dude-2">
+				<p>This is a dude number 2.</p>
+			</div>
+		</div>
 		<div id="container-couch">
 			<div id="couch">
 				<!-- <p>This is the couch.</p> -->
